--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "katex": "0.12.0",
+        "markdown-it": "12.3.2",
+        "markdown-it-block-image": "0.0.3",
+        "markdown-it-footnote": "3.0.3",
+        "markdown-it-texmath": "1.0.0",
+        "markdown-it-toc-done-right": "4.2.0",
+        "punycode": "2.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
